// SPDX-License-Identifier: Apache-2.0
// Copyright Authors of Cilium


// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package github.com.cilium.cilium.pkg.k8s.slim.k8s.apis.apiextensions.v1;

import "github.com/cilium/cilium/pkg/k8s/slim/k8s/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "github.com/cilium/cilium/pkg/k8s/slim/k8s/apis/apiextensions/v1";

// ConversionRequest describes the conversion request parameters.
message ConversionRequest {
  // desiredAPIVersion is the version to convert given objects to. e.g. "myapi.example.com/v1"
  optional string desiredAPIVersion = 2;
}

// ConversionReview describes a conversion request/response.
message ConversionReview {
  // request describes the attributes for the conversion request.
  // +optional
  optional ConversionRequest request = 1;
}

// CustomResourceDefinition represents a resource that should be exposed on the API server.  Its name MUST be in the format
// <.spec.name>.<.spec.group>.
message CustomResourceDefinition {
  // Standard object's metadata
  // More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata
  // +optional
  optional github.com.cilium.cilium.pkg.k8s.slim.k8s.apis.meta.v1.ObjectMeta metadata = 1;
}

// CustomResourceDefinitionList is a list of CustomResourceDefinition objects.
message CustomResourceDefinitionList {
  // Standard object's metadata
  // More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata
  // +optional
  optional github.com.cilium.cilium.pkg.k8s.slim.k8s.apis.meta.v1.ListMeta metadata = 1;

  // items list individual CustomResourceDefinition objects
  repeated CustomResourceDefinition items = 2;
}

// CustomResourceSubresourceScale defines how to serve the scale subresource for CustomResources.
message CustomResourceSubresourceScale {
  // specReplicasPath defines the JSON path inside of a custom resource that corresponds to Scale `spec.replicas`.
  // Only JSON paths without the array notation are allowed.
  // Must be a JSON Path under `.spec`.
  // If there is no value under the given path in the custom resource, the `/scale` subresource will return an error on GET.
  optional string specReplicasPath = 1;

  // statusReplicasPath defines the JSON path inside of a custom resource that corresponds to Scale `status.replicas`.
  // Only JSON paths without the array notation are allowed.
  // Must be a JSON Path under `.status`.
  // If there is no value under the given path in the custom resource, the `status.replicas` value in the `/scale` subresource
  // will default to 0.
  optional string statusReplicasPath = 2;

  // labelSelectorPath defines the JSON path inside of a custom resource that corresponds to Scale `status.selector`.
  // Only JSON paths without the array notation are allowed.
  // Must be a JSON Path under `.status` or `.spec`.
  // Must be set to work with HorizontalPodAutoscaler.
  // The field pointed by this JSON path must be a string field (not a complex selector struct)
  // which contains a serialized label selector in string form.
  // More info: https://kubernetes.io/docs/tasks/access-kubernetes-api/custom-resources/custom-resource-definitions#scale-subresource
  // If there is no value under the given path in the custom resource, the `status.selector` value in the `/scale`
  // subresource will default to the empty string.
  // +optional
  optional string labelSelectorPath = 3;
}

// CustomResourceSubresourceStatus defines how to serve the status subresource for CustomResources.
// Status is represented by the `.status` JSON path inside of a CustomResource. When set,
// * exposes a /status subresource for the custom resource
// * PUT requests to the /status subresource take a custom resource object, and ignore changes to anything except the status stanza
// * PUT/POST/PATCH requests to the custom resource ignore changes to the status stanza
message CustomResourceSubresourceStatus {
}

// CustomResourceSubresources defines the status and scale subresources for CustomResources.
message CustomResourceSubresources {
  // status indicates the custom resource should serve a `/status` subresource.
  // When enabled:
  // 1. requests to the custom resource primary endpoint ignore changes to the `status` stanza of the object.
  // 2. requests to the custom resource `/status` subresource ignore changes to anything other than the `status` stanza of the object.
  // +optional
  optional CustomResourceSubresourceStatus status = 1;

  // scale indicates the custom resource should serve a `/scale` subresource that returns an `autoscaling/v1` Scale object.
  // +optional
  optional CustomResourceSubresourceScale scale = 2;
}

